paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_003/target.compile.log
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `lazy_static`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_003/target.rs:4:1
  |
4 | lazy_static::lazy_static! {
  | ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`

error[E0425]: cannot find value `GATE` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_003/target.rs:10:13
   |
10 |     let g = GATE.load(Ordering::SeqCst);
   |             ^^^^ not found in this scope

error[E0425]: cannot find value `D` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_003/target.rs:66:17
   |
35 | fn f(n: usize, p: &mut [i32], q: &[i32]) {
   | ---------------------------------------- similarly named function `f` defined here
...
66 |     let mut d = D.borrow_mut();
   |                 ^
   |
help: a function with a similar name exists
   |
66 -     let mut d = D.borrow_mut();
66 +     let mut d = f.borrow_mut();
   |
help: you might be missing a const parameter
   |
65 | fn g_defined<const D: /* Type */>() {
   |             +++++++++++++++++++++

error[E0425]: cannot find value `D` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_003/target.rs:74:21
   |
35 | fn f(n: usize, p: &mut [i32], q: &[i32]) {
   | ---------------------------------------- similarly named function `f` defined here
...
74 |         let mut d = D.borrow_mut();
   |                     ^ help: a function with a similar name exists: `f`

error[E0425]: cannot find value `D` in this scope
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_003/target.rs:81:13
   |
35 | fn f(n: usize, p: &mut [i32], q: &[i32]) {
   | ---------------------------------------- similarly named function `f` defined here
...
81 |     let d = D.borrow();
   |             ^ help: a function with a similar name exists: `f`

warning: unused import: `AtomicI32`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_003/target.rs:1:25
  |
1 | use std::sync::atomic::{AtomicI32, Ordering};
  |                         ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::cell::RefCell`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_003/target.rs:2:5
  |
2 | use std::cell::RefCell;
  |     ^^^^^^^^^^^^^^^^^^

error[E0502]: cannot borrow `*d` as immutable because it is also borrowed as mutable
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_003/target.rs:44:53
   |
44 |         safe_move(n, &mut d[p_start..p_start + n], &d[q_start..q_start + n], forward);
   |         ---------         -                         ^ immutable borrow occurs here
   |         |                 |
   |         |                 mutable borrow occurs here
   |         mutable borrow later used by call
   |
   = help: use `.split_at_mut(position)` to obtain two mutable non-overlapping sub-slices

error[E0502]: cannot borrow `*d` as immutable because it is also borrowed as mutable
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_2b/sample_003/target.rs:46:45
   |
46 |         f(n, &mut d[p_start..p_start + n], &d[q_start..q_start + n]);
   |         -         -                         ^ immutable borrow occurs here
   |         |         |
   |         |         mutable borrow occurs here
   |         mutable borrow later used by call
   |
   = help: use `.split_at_mut(position)` to obtain two mutable non-overlapping sub-slices

error: aborting due to 7 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0425, E0433, E0502.
For more information about an error, try `rustc --explain E0425`.